--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -43,3 +43,22 @@ main{
     height: 471px;
     
 }
+
+#redes{
+    text-align: right;
+}
+
+#redes img{
+    width: 50px;
+    border-radius: 50%;
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.445);
+    box-sizing: border-box;
+}
+
+#redes img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.678);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.664);
+    transition: 0.3s, border .3s;
+}
